--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.4
 
 services:
   db:
@@ -16,8 +16,8 @@ services:
     ports:
       - 8080:80
     volumes:
-      - ./app:/app:Z
-      - ./nginx/my.conf:/etc/nginx/conf.d/default.conf:z
+      - ./app:/app:z
+      - ./nginx/my.conf:/etc/nginx/conf.d/default.conf:Z
     depends_on:
       - db
       - php
@@ -28,7 +28,7 @@ services:
     ports:
       - 9000:9000
     volumes:
-      - ./app:/app:Z
+      - ./app:/app:z
     depends_on:
       - db
 
