--- a/nginx/my.conf
+++ b/nginx/my.conf
@@ -11,6 +11,7 @@ server {
                 try_files $uri =404;
                 fastcgi_index index.php;
                 include /etc/nginx/fastcgi_params;
+                fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
                 fastcgi_pass php:9000;
         }
 
